# beep

./: .bazelrc  .gitignore  CMakeLists.txt  README.md  WORKSPACE  libtorch.BUILD  prepare-submodules.sh  tfcompile.patch
beep/audio/: BUILD  alsa_devices.cc  alsa_devices.hh  audio_buffer.hh
beep/frontend/: BUILD  beep-example.cc
beep/input/: BUILD  wavreader.cc  wavreader.hh
beep/models/: BUILD  config.pbtxt  frozen_graph.pb  model.hh  ptmodel.cc  ptmodel.hh  tfmodel.cc  tfmodel.hh
beep/stats/: BUILD  stats_printer.cc  stats_printer.hh
beep/util/: BUILD  eventloop.cc  timer.hh
scripts/: prepare_model.py
src/audio/: alsa_devices.cc  alsa_devices.hh
src/frontend/: CMakeLists.txt  beep-example.cc  stats_printer.cc  stats_printer.hh
